[package]
name = "transmute"
version = "0.1.0"
edition = "2024"
description = "Multi-format document converter (text to epub, epub to txt, txt2epub, epub2txt) — EPUB 3.3 output with SVG cover, smart chapter detection"

[lib]
name = "transmute"
path = "src/lib.rs"

[[bin]]
name = "transmute"
path = "src/main.rs"

[[bin]]
name = "transmute-gui"
path = "src/gui.rs"

[dependencies]
eframe = "0.31"
egui = "0.31"
encoding_rs = "0.8"
rfd = "0.15"
zip = "2"
